corpus/c/storage_class/case-01/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.c:2:12: error: [syntax] static declaration of 'value' follows non-static declaration
raw : static declaration of 'value' follows non-static declaration
| src/main.c:2:12
| static int value;
|            ^
note: previous declaration of 'value' with type 'int'
details: --formed-explain | raw: --formed-raw